<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (c) 2019 Chen Mouxiang <cmx_1007@foxmail.com>
  ~ All Rights Reserved.
  -->

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/purple_background"
        tools:context=".view.ui.PostActivity">


    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="56dp" app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintEnd_toEndOf="parent"/>


    <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="@string/post_hint"
            app:boxStrokeColor="@color/white_text"
            app:hintTextColor="@color/white_text"
            android:textColorHint="@color/grey_text_600"
            app:layout_constraintEnd_toStartOf="@+id/frameLayout2"
            android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp" app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="@+id/frameLayout2"
            android:layout_marginTop="24dp">

        <EditText
                android:id="@+id/postEditText"
                android:layout_width="match_parent"
                android:inputType="textMultiLine"
                android:scrollbars="vertical"
                android:textColor="@color/white_text"
                android:maxLines="10"
                android:gravity="top"
                android:layout_height="match_parent"/>

    </com.google.android.material.textfield.TextInputLayout>

    <FrameLayout android:layout_width="120dp" android:layout_height="180dp"
                 android:id="@+id/frameLayout2"
                 android:layout_marginTop="24dp"
                 app:layout_constraintTop_toBottomOf="@+id/toolbar" app:layout_constraintEnd_toEndOf="parent"
                 android:layout_marginEnd="24dp" android:layout_marginRight="24dp">

        <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/postImg"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
        />

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAlignment="center"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:background="@color/black_background_transparent"
                android:textColor="@color/white_text"
                android:layout_gravity="bottom"
                android:text="@string/choose_cover"/>

    </FrameLayout>


    <com.google.android.material.button.MaterialButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/post_button"
            app:cornerRadius="4dp"
            android:gravity="center"
            app:iconTint="@color/white_text"
            android:textColor="@color/white_text"
            android:textAlignment="center"
            android:textSize="24sp"
            android:paddingBottom="12dp"
            android:paddingTop="12dp"
            android:paddingStart="36dp"
            android:paddingEnd="36dp"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_file_upload_white_24dp"
            app:backgroundTint="@color/pink_post_btn_background"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="24dp"
            android:layout_marginEnd="24dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>